_sources/api/gen/other/2.5.0/modules/domain.md.txt
# Module: domain

## References

### Battery

Re-exports [Battery](../classes/domain_Battery.Battery.md)

___

### BatteryHealth

Re-exports [BatteryHealth](../enums/domain_Battery.BatteryHealth.md)

___

### BatteryPlugged

Re-exports [BatteryPlugged](../enums/domain_Battery.BatteryPlugged.md)

___

### BatteryStatus

Re-exports [BatteryStatus](../enums/domain_Battery.BatteryStatus.md)

___

### DestinationControlPointLocation

Re-exports [DestinationControlPointLocation](../classes/domain_DestinationControlPointLocation.DestinationControlPointLocation.md)

___

### DestinationSiteLocation

Re-exports [DestinationSiteLocation](../classes/domain_DestinationSiteLocation.DestinationSiteLocation.md)

___

### DeviceRole

Re-exports [DeviceRole](../enums/domain_DeviceRole.DeviceRole.md)

___

### DisplayMode

Re-exports [DisplayMode](../enums/domain_DisplayMode.DisplayMode.md)

___

### EvamEvent

Re-exports [EvamEvent](../enums/domain_EvamEvent.EvamEvent.md)

___

### GRPC

Re-exports [GRPC](../classes/domain_GRPC.GRPC.md)

___

### HospitalLocation

Re-exports [HospitalLocation](../classes/domain_HospitalLocation.HospitalLocation.md)

___

### InternetState

Re-exports [InternetState](../enums/domain_InternetState.InternetState.md)

___

### LeavePatientLocation

Re-exports [LeavePatientLocation](../classes/domain_LeavePatientLocation.LeavePatientLocation.md)

___

### Location

Re-exports [Location](../classes/domain_Location.Location.md)

___

### Notification

Re-exports [Notification](../classes/domain_Notification.Notification.md)

___

### NotificationType

Re-exports [NotificationType](../enums/domain_NotificationType.NotificationType.md)

___

### Operation

Re-exports [Operation](../classes/domain_Operation.Operation.md)

___

### OperationPriority

Re-exports [OperationPriority](../classes/domain_OperationPriority.OperationPriority.md)

___

### OperationState

Re-exports [OperationState](../enums/domain_OperationState.OperationState.md)

___

### Patient

Re-exports [Patient](../classes/domain_Patient.Patient.md)

___

### RakelState

Re-exports [RakelState](../classes/domain_RakelState.RakelState.md)

___

### SystemHealth

Re-exports [SystemHealth](../classes/domain_SystemHealth.SystemHealth.md)

___

### TripLocationHistory

Re-exports [TripLocationHistory](../classes/domain_TripLocationHistory.TripLocationHistory.md)

___

### VehicleState

Re-exports [VehicleState](../classes/domain_VehicleState.VehicleState.md)

___

### VehicleStatus

Re-exports [VehicleStatus](../classes/domain_VehicleStatus.VehicleStatus.md)
